<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/BasicQuestionLinearLayout">

    <TextView
        style="@style/BasicQuestionText"
        android:text="@string/question6" />

    <CheckBox
        android:id="@+id/question6_choice1"
        style="@style/BasicQuestionChoiceCheckBox"
        android:text="@string/question6_choice1" />

    <CheckBox
        android:id="@+id/question6_choice2"
        style="@style/BasicQuestionChoiceCheckBox"
        android:text="@string/question6_choice2" />

    <CheckBox
        android:id="@+id/question6_choice3"
        style="@style/BasicQuestionChoiceCheckBox"
        android:text="@string/question6_choice3" />

    <CheckBox
        android:id="@+id/question6_choice4"
        style="@style/BasicQuestionChoiceCheckBox"
        android:text="@string/question6_choice4" />

</LinearLayout>
