<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/BasicQuestionLinearLayout">

    <TextView
        style="@style/BasicQuestionText"
        android:text="@string/question7" />

    <CheckBox
        android:id="@+id/question7_choice1"
        style="@style/BasicQuestionChoiceCheckBox"
        android:text="@string/question7_choice1" />

    <CheckBox
        android:id="@+id/question7_choice2"
        style="@style/BasicQuestionChoiceCheckBox"
        android:text="@string/question7_choice2" />

    <CheckBox
        android:id="@+id/question7_choice3"
        style="@style/BasicQuestionChoiceCheckBox"
        android:text="@string/question7_choice3" />

    <CheckBox
        android:id="@+id/question7_choice4"
        style="@style/BasicQuestionChoiceCheckBox"
        android:text="@string/question7_choice4" />

</LinearLayout>
