<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.VCSQuiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_edit_text"
            style="@style/BasicEditText"
            android:hint="@string/name"
            android:inputType="textCapWords" />

        <TextView
            style="@style/BasicMainQuestionText"
            android:text="@string/main_question"/>


        <include
            layout="@layout/question1"/>


        <include
            layout="@layout/question2"/>


        <include
            layout="@layout/question3"/>


        <include
            layout="@layout/question4"/>


        <include
            layout="@layout/question5"/>


        <include
            layout="@layout/question6"/>


        <include
            layout="@layout/question7"/>


        <include
            layout="@layout/question8"/>


        <include
            layout="@layout/question9"/>


        <LinearLayout
            style="@style/BasicQuestionLinearLayout"
            android:gravity="center">

            <Button
                style="@style/BasicButton"
                android:text="@string/submit_button"
                android:onClick="submitAnswer"/>

        </LinearLayout>


    </LinearLayout>


</ScrollView>
